--- a/google.scholar.bib
+++ b/google.scholar.bib
@@ -260,20 +260,6 @@
   publisher={IEEE}
 }
 
-@techreport{finn2019deterministic,
-  title={Deterministic networking problem statement},
-  author={Finn, Norman and Thubert, Pascal},
-  year={2019}
-}
-
-@incollection{finn2019deterministic,
-  title={Deterministic networking architecture},
-  author={Finn, Norman and Thubert, Pascal and Varga, Balazs and Farkas, J{\'a}nos},
-  booktitle={RFC 8655},
-  year={2019},
-  publisher={IETF}
-}
-
 @article{jaber20165g,
   title={5G backhaul challenges and emerging research directions: A survey},
   author={Jaber, Mona and Imran, Muhammad Ali and Tafazolli, Rahim and Tukmanov, Anvar},
@@ -486,4 +472,19 @@
   title={Raptor forward error correction scheme for object delivery},
   author={Luby, Michael and Shokrollahi, Amin and Watson, Mark and Stockhammer, Thomas},
   year={2007}
+}
+
+@inproceedings{krentel1986complexity,
+  title={The complexity of optimization problems},
+  author={Krentel, Mark W},
+  booktitle={Proceedings of the eighteenth annual ACM symposium on Theory of computing},
+  pages={69--76},
+  year={1986}
+}
+
+@phdthesis{tongaonkar2004fast,
+  title={Fast pattern-matching techniques for packet filtering},
+  author={Tongaonkar, Alok S},
+  year={2004},
+  school={Citeseer}
 }
